Scrollbar style added

--- a/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile.csproj
+++ b/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile.csproj
@@ -81,6 +81,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ResourceDictionaries\ScrollViewerStyleResource.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ResourceDictionaries\SearchBoxStyleResource.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
