--- a/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile.csproj
+++ b/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework.Aero" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -78,6 +79,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="ResourceDictionaries\ButtonResources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ResourceDictionaries\DataGridStyleResource.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
