--- a/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile.csproj
+++ b/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile/Design_dashboardATM_AIFile.csproj
@@ -49,9 +49,6 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Xceed.Wpf.Toolkit">
-      <HintPath>lib\Xceed.Wpf.Toolkit.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -69,6 +66,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\ATM_Model.cs" />
+    <Compile Include="Classes\ATM_ViewModel.cs" />
+    <Compile Include="Classes\BaseHandler.cs" />
+    <Compile Include="Classes\TextInputToVisibilityConverter.cs" />
     <Compile Include="CommonControl\AdditionalAttachedProperties.cs" />
     <Compile Include="CommonControl\CustomWindow.cs" />
     <Compile Include="Design_dashboardATM.xaml.cs">
@@ -78,11 +79,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ResourceDictionaries\ButtonResources.xaml">
+    <Page Include="ResourceDictionaries\ButtonStyleResource.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ResourceDictionaries\DataGridStyleResource.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ResourceDictionaries\RadioButtonStyleResource.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -91,6 +96,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ResourceDictionaries\SearchBoxStyleResource.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ResourceDictionaries\TabControlStyleResource.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
